2008-11-29  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Updated german translation - patch from
	Alexander Greiner-Baer <sogo-algb@freenet.de>

2008-11-28  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * We no longer show the previous/new location
	if it's empty in the invitation update templates.

2008-11-26  Ludovic Marcotte  <lmarcotte@inverse.ca>	

	* SoObjects/SOGo/SOGoGCSFolder.m
	We correctly wrap ACL additions around a 
	database transaction.
	* Updated the code wrt acting on behalf of
	someone else to speed up things and also to
	honor the participation status of the one acting
	on behalf of someone else.

2008-11-26  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m
	We escape the ' character in the folder name
	before trying to set it.
	* SoObjects/Appointments/SOGoAppointmentObject.m
	We now handle the originator/organizer correctly
	when posting CalDAV messages.

2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * We now sort the results in the subsription window

2008-11-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-toManyRelationshipKeys]): return the subfolders in the order by
	which they appear in the web interface, to avoid confusing
	Lighting with its Inbox management and so that the folders appear
	in an ordered way.

2008-11-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage
	-usersSearchAction]): new method, derived from the previous
	version of foldersSearchAction, but that only returns username and
	contact info about matching users.
	([SOGoUserHomePage -foldersSearchAction]): new implementation that
	returns the folders available for subscription of the only user
	passed as parameter.

2008-11-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * UI/Scheduler/UIxComponentEditor.m - _loadAttendees
	We set the name to the rfc822 email address if the